# homedrive

./: .dockerignore  .env.example  .gitignore  .jwt_secret  Cargo.toml  Dockerfile  ENTRY.md  LICENSE  compose.yml  default.toml  rust-toolchain.toml
.github/workflows/: build.yml
.kilocode/: setup-script
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/kingzcheung/homedrive/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kingzcheung/homedrive/: HomedriveApp.kt  MainActivity.kt
android/app/src/main/java/com/kingzcheung/homedrive/data/api/: HomedriveApi.kt
android/app/src/main/java/com/kingzcheung/homedrive/data/local/: PreferencesManager.kt
android/app/src/main/java/com/kingzcheung/homedrive/data/model/: Models.kt
android/app/src/main/java/com/kingzcheung/homedrive/data/network/: NetworkScanner.kt
android/app/src/main/java/com/kingzcheung/homedrive/data/repository/: Repositories.kt
android/app/src/main/java/com/kingzcheung/homedrive/di/: AppModule.kt  AuthInterceptor.kt
android/app/src/main/java/com/kingzcheung/homedrive/ui/screen/: AlbumScreen.kt  GalleryScreen.kt  HomeScreen.kt  HomeTvScreen.kt  LoginScreen.kt  MediaViewerScreen.kt  SettingsScreen.kt  ShareScreen.kt  UploadScreen.kt
android/app/src/main/java/com/kingzcheung/homedrive/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/kingzcheung/homedrive/ui/tv/: TvComponents.kt
android/app/src/main/java/com/kingzcheung/homedrive/ui/viewmodel/: AlbumViewModel.kt  GalleryViewModel.kt  LoginViewModel.kt  MediaViewerViewModel.kt  SettingsViewModel.kt  ShareViewModel.kt  UploadViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/test/java/com/kingzcheung/homedrive/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_member_table.rs  m20260204_013920_file_contents.rs  m20260204_013930_user_files.rs  m20260205_041830_create_sync_messages_table.rs  m20260205_041830_create_task_messages_table.rs  m20260208_090000_add_thumbnail.rs  m20260211_063853_album.rs  m20260211_064048_album_files.rs  m20260214_000001_add_member_role.rs  m20260303_000001_add_deleted_at.rs
crates/schema/: Cargo.toml
crates/schema/src/: album.rs  file.rs  lib.rs  member.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  error.rs  frontend.rs  lib.rs  render.rs  secret.rs  server.rs  state.rs
crates/server/src/extract/: mod.rs
crates/server/src/handler/: album.rs  file.rs  member.rs  mod.rs  system.rs
crates/server/src/route/: album.rs  auth.rs  file.rs  member.rs  mod.rs  task.rs
crates/services/: Cargo.toml
crates/services/src/: album.rs  error.rs  file_content.rs  lib.rs  member.rs  storage.rs
crates/services/src/task/: mod.rs  sync_file.rs  thumbnail.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/src/album/: mutation.rs  query.rs
crates/store/src/entity/: album_files.rs  albums.rs  file_contents.rs  member_files.rs  members.rs  mod.rs  prelude.rs  sync_messages.rs  task_messages.rs
crates/store/src/file_content/: mutation.rs  query.rs
crates/store/src/member/: mutation.rs  query.rs
crates/store/src/member_file/: mutation.rs  query.rs
crates/thumbnail/: Cargo.toml
crates/thumbnail/examples/: generate_test.rs
crates/thumbnail/src/: lib.rs
docs/homedrive/: getUser.yml  init_admin.yml  login.yml  opencollection.yml
docs/homedrive/environments/: dev.yml
docs/homedrive/files/: List files.yml  file_sync.yml  folder.yml
web/: .env.example  package.json  pnpm-lock.yaml  react-router.config.ts  types.d.ts
web/app/: api.ts  app.css  auth-context.tsx  root.tsx  routes.ts  theme-context.tsx
web/app/components/: MainContent.tsx  Sidebar.tsx  TopBar.tsx  UploadModal.tsx  VideoPlayerModal.tsx
web/app/hooks/: useMediaQuery.ts
web/app/routes/: albums.tsx  home.tsx  login.tsx  profile.tsx  settings.tsx  setup.tsx  sharing.tsx
web/app/welcome/: welcome.tsx
