[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "homedrive"
path = "src/bin/main.rs"

[dependencies]
axum = {version = "*", features = ["macros"]}
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tokio = {workspace = true}
tower-http = { version = "0.6.8", features = ["cors"] }
store = {path = "../store"}
services = {path = "../services"}
schema = {path = "../schema"}
serde_json = "1.0"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["client-legacy"] }
serde = {workspace = true}
thiserror = "2.0.18"
jsonwebtoken = "10.3.0"
rand = "0.8"
base64 = "0.22"