[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "homedrive"
path = "src/bin/main.rs"

[dependencies]
axum = {version = "0.8", features = ["macros", "multipart"]}
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tokio = {workspace = true}
tower-http = { version = "0.6.8", features = ["cors"] }
store = {path = "../store"}
services = {path = "../services"}
schema = {path = "../schema"}
serde_json = "1.0"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["client-legacy"] }
serde = {workspace = true, features = ["derive"]}
thiserror = "2.0.18"
jsonwebtoken = {version="10.3.0",features = ["rust_crypto"]}
axum-extra = { version = "0.12.5", features = ["typed-header"] }
rand = "0.9.2"
base64 = "0.22"
dotenvy = "0.15"
config = "0.15.19"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
sea-orm = { version = "2.0.0-rc", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
once_cell = "1.21"
chrono = { version = "0.4", features = ["std"] }
urlencoding = "1.1"
