[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "homedrive"
path = "src/bin/main.rs"

[dependencies]
axum = {version = "0.8", features = ["macros", "multipart"]}
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tokio = {workspace = true}
tower-http = { version = "0.6.8", features = ["cors"] }
store = {path = "../store"}
services = {path = "../services"}
schema = {path = "../schema"}
serde_json = "1.0"
hyper = { version = "1.8.1", features = ["full"] }
serde = {workspace = true, features = ["derive"]}
thiserror = "2.0.18"
jsonwebtoken = {version="10.3.0",features = ["rust_crypto"]}
rand = { version = "0.10.0", features = ["std"] }
base64 = "0.22"
dotenvy = "0.15"
config = "0.15.19"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
sea-orm = { version = "2.0.0-rc", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
once_cell = "1.21"
chrono = { version = "0.4", features = ["std"] }
urlencoding = "2.1.3"
futures = "0.3"
validator = { version = "0.20.0", features = ["derive"] }
sysinfo = "0.38.1"
rust-embed = "8.11.0"
