[package]
name = "services"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
store = { path = "../store" }
schema = { path = "../schema" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = "10.3.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.18.0"
once_cell = "1.21.3"
async-trait = "0.1"
tokio = { workspace = true, features = ["fs"] }
