[package]
name = "services"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
store = { path = "../store" }
schema = { path = "../schema" }
thumbnail = { path = "../thumbnail" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = "10.3.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.18.0"
once_cell = "1.21.3"
async-trait = "0.1"
tokio = { workspace = true, features = ["fs", "io-util"] }
sea-orm = "2.0.0-rc.30"
futures = "0.3"
bytes = "1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
