[package]
name = "store"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
migration = { path = "../migration" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sea-orm]
features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"]
version = "2.0.0-rc"